More link fixes

--- a/Language/glossary.pod
+++ b/Language/glossary.pod
@@ -527,7 +527,7 @@ Let Me DuckDuckGo That For You.  L<https://lmddgtfy.net>
 
 =head2 LMGTFY
 
-Let Me Google That For You.  L<https://lmgtfy.com/>
+Let Me Google That For You.  L<http://lmgtfy.com/>
 
 =head2 LTA
 
