--- a/Language/setbagmix.pod
+++ b/Language/setbagmix.pod
@@ -411,7 +411,7 @@ across the arguments multiplied together to get the new weight.
 
 X<Baggy multiplication operator> (alternate).
 
-Equivalent to L«(.)|infix (.)», at codepoint U+228D (MULTISET MULTIPLICATION).
+Equivalent to L«infix (.)|(.)», at codepoint U+228D (MULTISET MULTIPLICATION).
 
 =head3 infix (+)
 
