doc the also declarator

--- a/Language/classtut.pod
+++ b/Language/classtut.pod
@@ -574,6 +574,22 @@ the design wouldn't be better realized by using roles, which are generally
 safer because they force the class author to explicitly resolve conflicting
 method names.  For more information on roles see L<Roles|/language/objects#Roles>.
 
+=head2 The C<also> declarator
+
+Classes to be inherited from can be listed in the class declaration body by
+prefixing the C<is> trait with C<also>. This also works for the role
+composition trait C<does>.
+
+    class GeekCook {
+        also is Programmer;
+        also is Cook;
+        # ...
+    }
+    
+    role A {};
+    role B {}; 
+    class C { also does A; also does B }
+
 =head1 Introspection
 
 Introspection is the process of gathering information about some objects in
