--- a/Language/classtut.pod
+++ b/Language/classtut.pod
@@ -574,7 +574,7 @@ the design wouldn't be better realized by using roles, which are generally
 safer because they force the class author to explicitly resolve conflicting
 method names.  For more information on roles see L<Roles|/language/objects#Roles>.
 
-=head2 The C<also> declarator
+=head2 The X<C<also>|also declarator> declarator
 
 Classes to be inherited from can be listed in the class declaration body by
 prefixing the C<is> trait with C<also>. This also works for the role
