add TODOs for some traits

--- a/Language/typesystem.pod
+++ b/Language/typesystem.pod
@@ -55,6 +55,30 @@ be searched use a C<HyperWhatever>.
     }
     D.new.m1;
 
+=head3 trait C<is>
+
+TODO
+
+=head3 trait C<is required>
+
+TODO
+
+=head3 trait C<does>
+
+TODO
+
+=head3 trait C<hides>
+
+TODO
+
+=head3 trait C<trusts>
+
+TODO
+
+=head3 trait C<will>
+
+TODO
+
 =head2 C<role>
 
 TODO
