tidy grammar and punctuation; use consistent var names

--- a/Language/testing.pod
+++ b/Language/testing.pod
@@ -140,7 +140,7 @@ are approximately equal to each other. The subroutine can be called in numerous
 ways that let you test using relative tolerance (C<$rel-tol>) or
 absolute tolerance (C<$abs-tol>) of different values.
 
-If no tolerance is set, it will default to absolute tolerance of C<1e-5>
+If no tolerance is set, it will default to an absolute tolerance of C<1e-5>.
 
     my Numeric ($value, $expected, $abs-tol, $rel-tol) = ...
 
@@ -161,7 +161,7 @@ If no tolerance is set, it will default to absolute tolerance of C<1e-5>
 
 =head3 Absolute Tolerance
 
-When absolute tolerance is set, it's used as the actual maximum value by
+When an absolute tolerance is set, it's used as the actual maximum value by
 which the C<$value> and C<$expected> can differ. For example:
 
     is-approx 3, 4, 2; # success
@@ -172,11 +172,11 @@ which the C<$value> and C<$expected> can differ. For example:
     is-approx 300, 600, 2; # fail
 
 Regardless of values given, the difference between them cannot be more
-than C<2>
+than C<2>.
 
 =head3 Relative Tolerance
 
-When relative tolerance is set, the test checks relative difference between
+When a relative tolerance is set, the test checks the relative difference between
 values. Given the same tolerance, the larger the numbers given, the larger the
 value they can differ by can be.
 
@@ -193,16 +193,16 @@ by about C<1> while the second can differ by about C<10>. The function used
 to calculate the difference is:
 
 =begin code
-              |got - expected|
+              |value - expected|
 ⁣rel-diff = ──────────────────────
-           max(|got|, |expected|)
+           max(|value|, |expected|)
 =end code
 
 And the test will fail if C<rel-diff> is higher than C<$rel-tol>
 
 =head3 Both Absolute and Relative Tolerance Specified
 
-    is-approx $got, $expected, :rel-tol<.5>, :abs-tol<10>;
+    is-approx $value, $expected, :rel-tol<.5>, :abs-tol<10>;
 
 When both absolute and relative tolerances are specified, each will be
 tested independently, and the C<is-approx> test will succeed only if both pass.
