Add panda to search index

--- a/Language/modules.pod
+++ b/Language/modules.pod
@@ -466,7 +466,7 @@ To share your module, do the following:
 
 B<That's it! Thanks for contributing to the Perl 6 community!>
 
-If you'd like to try out installing your module, use the panda module
+If you'd like to try out installing your module, use the X<panda> module
 installer tool which is included with Rakudo Star Perl 6:
 
 =code panda install Vortex::TotalPerspective
