another edit tweak

--- a/Language/testing.pod
+++ b/Language/testing.pod
@@ -198,7 +198,7 @@ to calculate the difference is:
            max(|value|, |expected|)
 =end code
 
-And the test will fail if C<rel-diff> is higher than C<$rel-tol>
+and the test will fail if C<rel-diff> is higher than C<$rel-tol>.
 
 =head3 Both Absolute and Relative Tolerance Specified
 
