Fix typo timeless++

--- a/Type/Str.pod
+++ b/Type/Str.pod
@@ -562,7 +562,7 @@ Returns the invocant string where C<$matcher> is replaced by C<$replacement>
 (or the original string, if no match was found).
 
 There is an in-place syntactic variant of C<subst> spelled
-C<s/matcher/replacement>.
+C<s/matcher/replacement/>.
 
 C<$matcher> can be a L<Regex>, or a literal C<Str>. Non-Str matcher arguments
 of type L<Cool> are coerced to C<Str> for literal matching.
