Mentions captures start with $0

--- a/Language/5to6-nutshell.pod
+++ b/Language/5to6-nutshell.pod
@@ -901,6 +901,11 @@ Alternately, the new C<.match> and C<.subst> methods can be used. Note that
 C<.subst> is non-mutating. See
 L<S05/Substitution|https://design.perl6.org/S05.html#Substitution>.
 
+=head2 Captures start with 0, not 1
+
+    /(.+)/ and print $1; # Perl 5
+    /(.+)/ and print $0; # Perl 5
+
 =head2 Move modifiers
 
 Move any modifiers from the end of the regex to the beginning. This may
