Fix missing quote.

--- a/Language/5to6-perlfunc.pod
+++ b/Language/5to6-perlfunc.pod
@@ -1489,7 +1489,7 @@ Replaced by C<&?ROUTINE>.
 =item substr EXPR,OFFSET
 
 Can be used as a function or a method. C<substr("hola!", 1, 3)> and
-C<"hola!.substr(1, 3)> both return "ola".
+C<"hola!".substr(1, 3)> both return "ola".
 
 =head2 symlink
 
