improve Hash, provide link to subscripts

--- a/Type/Hash.pod
+++ b/Type/Hash.pod
@@ -15,10 +15,18 @@ Hashes are usually stored in variables with the percent C<%> sigil.
 Hash elements are accessed by key via the C<{ }> postcircumfix operator:
 
     my $home = %*ENV{'HOME'};
+	dd %*ENV{'HOME', 'PATH'};
+	# OUTPUT«("/home/camelia", "/usr/bin:/sbin:/bin")␤»
 
-For literal string keys without whitespace, C< < > > can be used instead:
+The general L<Subscript|/language/subscripts> rules apply providing shortcuts
+for lists of literal strings, with and without interpolation.
 
-    my $home = %*ENV<HOME>;
+	my %h = oranges => 'round', bananas => 'bendy';
+	dd %h<oranges bananas>;
+	# OUTPUT«("round", "bendy")␤»
+	my $fruit = 'bananas'; 
+	dd %h«oranges $fruit»
+	OUTPUT«("round", "bendy")␤»
 
 You can add new pairs simply by assigning to an unused key:
 
