Fix typo mentioned in #598

--- a/Type/Capture.pod
+++ b/Type/Capture.pod
@@ -31,8 +31,8 @@ Commonly, this term will be a List of terms, from which any Pair
 literal will be placed in the named part, and all other terms will be
 placed in the positional part.
 
-    my $c = \(42);            # Capture with one positional parts
-    $c = \(1, 2, a => 'b'); # Capture with two positional and one named part
+    my $c = \(42);          # Capture with one positional part
+    $c = \(1, 2, a => 'b'); # Capture with two positional and one named parts
 
 To use such a Capture, you may use C<'|'> before it in a function call, and it
 will be as if the values in the Capture were passed directly to the function
