add is for container type to index

--- a/Language/variables.pod
+++ b/Language/variables.pod
@@ -29,6 +29,7 @@ Examples:
     my @array  = 1, 2, 3;   # Array variable with three elements
     my %hash   = London => 'UK', Berlin => 'Germany';
 
+X<|is (container type)>
 The default type can be set with C<is>.
 
     class FailHash is Hash {
