better index entry for is (testing)

--- a/Language/testing.pod
+++ b/Language/testing.pod
@@ -104,7 +104,7 @@ case the comparison fails.
 
 =head2 By string comparison
 
-=item X<is($value, $expected, $description?)|is>
+=item X<is($value, $expected, $description?)|is (testing)>
 
 Marks a test as passed if C<$value> and C<$expected> compare positively with
 the L<eq operator|/routine/eq>. The function accepts an optional
