change listig wording

--- a/Type/Signature.pod
+++ b/Type/Signature.pod
@@ -250,7 +250,7 @@ as described below.
 
 The single argument rule allowes to treat arguments to subroutines,
 C<for>-loops and list constructors based on context. Many methods on positional
-types can work with a single arguments the same way then with a list or
+types can work with a single arguments the same way as with a list or
 arguments. Using C<+@> as a sigil in a Signature provides syntactic sugar to
 make that task a little easier. Any single argument of a non-positional type
 will be promoted to a list with a single item.
