fix articles for NF* unicode classes

--- a/Type/NFD.pod
+++ b/Type/NFD.pod
@@ -4,7 +4,7 @@
 
 =SUBTITLE Codepoint-String in Normal Form D (Decomposed)
 
-    class NFC is Uni { ... }
+    class NFD is Uni { ... }
 
 A Codepoint string in the "D" L<Unicode Normalization Form|http://www.unicode.org/reports/tr15/>
 
