--- a/Type/NFKD.pod
+++ b/Type/NFKD.pod
@@ -4,7 +4,7 @@
 
 =SUBTITLE Codepoint-String in Normal Form KD (Compatibility Decomposed)
 
-    class NFC is Uni { ... }
+    class NFKD is Uni { ... }
 
 A Codepoint string in the "KD" L<Unicode Normalization Form|http://www.unicode.org/reports/tr15/>
 
