--- a/Type/NFKC.pod
+++ b/Type/NFKC.pod
@@ -4,7 +4,7 @@
 
 =SUBTITLE Codepoint-String in Normal Form KC (Compatibility Composed)
 
-    class NFC is Uni { ... }
+    class NFKC is Uni { ... }
 
 A Codepoint string in the "KC" L<Unicode Normalization Form|http://www.unicode.org/reports/tr15/>
 
