Update language on 404.

--- a/404.pod
+++ b/404.pod
@@ -4,8 +4,11 @@
 
 <h2>404: Page Not Found</h2>
 
-<p style="line-height: 1.7em">The page you tried to reach was moved or deleted. If you reached this page by following
-some link on this site, please report it <a href="https://github.com/perl6/doc/issues/new">on our GitHub repository</a>,
-so it could be fixed.</p>
+<p style="line-height: 1.7em">
+    The page you tried to reach cannot be found. If you got here by following
+    a link on this site, please report it
+    <a href="https://github.com/perl6/doc/issues/">on our GitHub repository</a>
+    so we can fix it!
+</p>
 
 =end Html
