--- a/Language/faq.pod
+++ b/Language/faq.pod
@@ -8,7 +8,7 @@
 
 =head2 What's the difference between Rakudo and Perl 6?
 
-Rakudo is an implementation of Perl 6. It's currently the most developed, but
+L<Rakudo|http://rakudo.org/> is an implementation of Perl 6. It's currently the most developed, but
 there have been other implementations in the past and should be others in the
 future. Perl 6 is the definition of the language. Many times the two names will
 be used loosely and interchangeably.
