--- a/Type/Num.pod
+++ b/Type/Num.pod
@@ -10,4 +10,9 @@ A C<Num> object stores a floating-point number. It is immutable. On most
 platforms, it's an IEEE 754 64-bit floating point numbers, aka "double
 precision".
 
+=head2 NaN
+
+The value X<C<NaN>> is an instance of C<Num> represents a float point
+not-a-number value. It is defined and boolifies to True.
+
 =end pod
