fix and add links to NaN

--- a/Type/Complex.pod
+++ b/Type/Complex.pod
@@ -86,7 +86,7 @@ Usage:
 
     COMPLEX.isNaN
 
-Returns true if the real or imaginary part is C<NaN> (not a number).
+Returns true if the real or imaginary part is L<C<NaN>|/type/Num#NaN> (not a number).
 
 =head2 method polar
 
