--- a/Type/Int.pod
+++ b/Type/Int.pod
@@ -198,7 +198,7 @@ Usage:
     INTEGER.unival
 
 Returns the number represented by the Unicode codepoint with the given integer
-number, or L<NaN> if it does not represent a number.
+number, or L<NaN|/type/Num#NaN> if it does not represent a number.
 
     say ord("¾").unival;    # 0.75
     say 190.unival;         # 0.75
