--- a/Type/Numeric.pod
+++ b/Type/Numeric.pod
@@ -113,7 +113,7 @@ Returns the absolute value of the number.
 Returns a square root of the number. For real numbers the positive square
 root is returned.
 
-On negative real numbers, C<sqrt> returns C<NaN> rather than a complex number,
+On negative real numbers, C<sqrt> returns L<C<NaN>|/type/Num#NaN> rather than a complex number,
 in order to not confuse people who are not familiar with complex arithmetic.
 If you want to calculate complex square roots, coerce to C<Complex> first, or
 use the C<roots> method.
