--- a/Type/Num.pod
+++ b/Type/Num.pod
@@ -12,7 +12,7 @@ precision".
 
 =head2 NaN
 
-The value X<C<NaN>|NaN (definition)> is an instance of C<Num> represents a float point
+The value X<C<NaN>|NaN (definition)> is an instance of C<Num> and represents a float point
 not-a-number value. It is defined and boolifies to True.
 
 =end pod
