add index entry for is to classtut

--- a/Language/classtut.pod
+++ b/Language/classtut.pod
@@ -442,6 +442,8 @@ on the various other dependencies in order, giving the output:
 
 =head1 Inheritance
 
+X<|is (inheritance)>
+
 Object Oriented Programming provides the concept of inheritance as one of
 the mechanisms to allow for code reuse.  Perl 6 supports the ability for one
 class to inherit from one or more classes.  When a class inherits from
