--- a/Type/Metamodel/MethodContainer.pod
+++ b/Type/Metamodel/MethodContainer.pod
@@ -44,6 +44,9 @@ If C<:local> is set, only methods declared directly in the class are returned.
 The returned list contains objects of type L<Method>, which you can
 use to introspect their signatures and call them.
 
+Some introspection methods like L<C<WHAT>|/language/mop#WHAT> will not show up,
+although they are present in any Perl 6 object.
+
 =head2 method method_table
 
     method method_table(Metamodel::MethodContainer:D: $obj) returns Hash:D
