add will trait to index

--- a/Language/phasers.pod
+++ b/Language/phasers.pod
@@ -90,6 +90,7 @@ temporary binding of C<$_> would leak out past the end of the C<CATCH> or
 C<CONTROL>, with unpredictable and quite possibly dire consequences. Exception
 handlers are supposed to reduce uncertainty, not increase it.)
 
+X<|will trait>
 Some of these phasers also have corresponding traits that can be set on
 variables. These have the advantage of passing the variable in question into
 the closure as its topic:
