cmp-ok cannot take custom operators as string
Mention &[op] notation.

--- a/Language/testing.pod
+++ b/Language/testing.pod
@@ -249,6 +249,12 @@ accepts an optional C<$description> of the test.
 
     cmp-ok 'my spelling is apperling', '~~', /perl/, "bad speller";
 
+B<Note:> user-defined operators cannot be passed as strings. Use
+the C<&[]> notation instead:
+
+    sub infix:<◀> { $^a < $^b };
+    cmp-ok 4, &[◀], 5, 'comparing using my fancy operator';
+
 =head2 By object type
 
 =item X<isa-ok($value, $expected-type, $description?)|isa-ok>
