Make it clearer cmp-ok can take a Callable

--- a/Language/testing.pod
+++ b/Language/testing.pod
@@ -249,6 +249,11 @@ accepts an optional C<$description> of the test.
 
     cmp-ok 'my spelling is apperling', '~~', /perl/, "bad speller";
 
+The C<$comparison> can be any L<Callable>, allowing you to use custom comparisons:
+
+    cmp-ok 2, sub { $^a.is-prime and $^b.is-prime and $^a < $^b }, 7,
+        'we got primes, one larger than the other!';
+
 B<Note:> user-defined operators cannot be passed as strings. Use
 the C<&[]> notation instead:
 
