Minor clarifification of Str form of throws-like

--- a/Language/testing.pod
+++ b/Language/testing.pod
@@ -428,9 +428,9 @@ throws-like { frodo }, Exception, message => /dies/;
 
 The function accepts an optional C<$description> of the test.
 
-Please note that you can only use the C<EVAL> form if you are not referencing
-any symbols in the surrounding scope.  If you are, you should encapsulate
-your string with a block and an EVAL.  For instance:
+Please note that you can only use the string form (for C<EVAL>) if you are not referencing
+any symbols in the surrounding scope. If you are, you should encapsulate
+your string with a block and an EVAL instead. For instance:
 
     throws-like { EVAL q[ fac("foo") ] }, X::TypeCheck::Argument;
 
