improve capture parameters

--- a/Type/Signature.pod
+++ b/Type/Signature.pod
@@ -401,6 +401,13 @@ indicate that the routine's L<C<multi> definitions|multi> can have any L<type
 constraints|#Type_Constraints>. See L<proto|/language/functions#proto> for an
 example.
 
+If bound to a variable arguments can be forwarded as a whole using the slip operator C<|>.
+
+    sub a(Int $i, Str $s) { say $i.WHAT, $s.WHAT }
+    sub b(|c) { say c.WHAT; a(|c) }
+    b(42, "answer");
+    # OUTPUT«(Capture)␤(Int)(Str)␤»
+
 =head2 X<Parameter Traits and Modifiers|trait,is copy;trait,is rw>
 
 By default, parameters are bound to their argument and marked as
