add coercion types to signature

--- a/Type/Signature.pod
+++ b/Type/Signature.pod
@@ -196,6 +196,16 @@ type constraint.
 
 Type captures and coercion types are not supported.
 
+=head3 X<Coercion Type|coercion type (signature)>
+
+To accept one type but coerce it automatically to another, use the accepted
+type as an argument to the target type. If the accepted type is C<Any> it can
+be obmitted.
+
+    sub f(Int(Str) $want-int, Str() $want-str){ say $want-int.WHAT, $want-str.WHAT }
+    f '10', 10; 
+    # OUTPUT«(Int)(Str)␤»
+
 =head2 X<Slurpy (A.K.A. Variadic) Parameters|parameter,*@;parameter,*%>
 
 An array or hash parameter can be marked as I<slurpy> by leading asterisk(s),
