--- a/Type/Signature.pod
+++ b/Type/Signature.pod
@@ -400,6 +400,15 @@ However, this unpacking of objects as their attributes is only the default
 behavior. To make an object get destructured differently, change its
 L<C<Capture>> method.
 
+=head2 C<Long Names>
+
+To avoid to have some arguments to be considered for multiple dispatch
+separate them with a double semi-colon.
+
+    multi sub f(Int $i, Str $s;; :$b) { dd $i, $s, $b };
+    f(10, 'answer');
+    # OUTPUT«10␤"answer"␤Any $b = Any␤»
+
 =head2 X<Capture Parameters|parameter,|>
 
 Prefixing a parameter with a vertical bar C<|> makes the parameter a
