--- a/Type/Signature.pod
+++ b/Type/Signature.pod
@@ -48,6 +48,17 @@ closure.
 	f(&won't-work); # fails at runtime
 	f(-> Int { 'this works too' } );
 
+Smart matching signatures against a List is supported.
+
+    my $sig = :(Int $i, Str $s);
+    say (10, 'answer') ~~ $sig;
+    # OUTPUT«True␤»
+    given ('answer', 10) { 
+        when :(Str, Int) { say 'match' }
+        when $sig { say 'mismatch' }
+    }
+    # OUTPUT«match␤»
+
 =head2 Parameter Separators
 
 A signature consists of zero or more I<L<parameters|Parameter>>, separated by comma.
