signatures do smartmatch against Hash

--- a/Type/Signature.pod
+++ b/Type/Signature.pod
@@ -59,6 +59,12 @@ Smart matching signatures against a List is supported.
     }
     # OUTPUT«match␤»
 
+When smart matching against a Hash, the signature is assumed to consist of the keys of the Hash.
+
+    my %h = left => 1, right => 2;
+    say %h ~~ :(:$left, :$right);
+    # OUTPUT«True␤»
+
 =head2 Parameter Separators
 
 A signature consists of zero or more I<L<parameters|Parameter>>, separated by comma.
