more index entries for Signature

--- a/Type/Signature.pod
+++ b/Type/Signature.pod
@@ -13,6 +13,7 @@ you need to pass to the code or function in order to call it.
 Passing arguments to a signature I<binds> the arguments, contained in
 a L<Capture>, to the signature.
 
+X<|signature literal (Signature)>
 =head1 Signature Literals
 
 Signatures appear in parenthesis after subroutine and method names, on
@@ -90,6 +91,7 @@ L<class|/syntax/class> Foo {
 say Foo.whoami; # => Well I'm class Foo, of course!
 =end code
 
+X<|type constraint (Signature)>
 =head2 Type Constraints
 
 Parameters can optionally have a type constraint (the default is L<C<Any>>).
@@ -102,6 +104,7 @@ sub divisors (B<L<Int>> $n) { $_ if $n L<%%> $_ for 1..$n }
 divisors 2.5; # !!! Calling 'divisors' will never work with argument types (L<Rat>)
 =end code
 
+X<|anonymouse arguments (Signature)>
 Anonymous parameters are fine too, if a parameter is only needed for
 its type constraint.
 
