change word for consistency

--- a/Type/Signature.pod
+++ b/Type/Signature.pod
@@ -105,7 +105,7 @@ divisors 2.5; # !!! Calling 'divisors' will never work with argument types (L<Ra
 =end code
 
 X<|anonymouse arguments (Signature)>
-Anonymous parameters are fine too, if a parameter is only needed for
+Anonymous arguments are fine too, if a parameter is only needed for
 its type constraint.
 
 =for code :allow<B L>
