add another question

--- a/Language/faq.pod
+++ b/Language/faq.pod
@@ -479,7 +479,13 @@ string|/type/Match>.
 
 C<OpaquePointer> is deprecated and has been replaced with C<Pointer>.
 
-=head1 Implementation Details
+=head1 Perl 6 Implementation
+
+=head2 What Perl 6 Implementations are available?
+
+Currently the best developed is Rakudo (using multiple Virtual Machine
+backends). Historic implementations include Niecza (.NET) and Pugs (Haskall).
+Others are listed at  L<Perl 6 Compilers|https://www.perl6.org/compilers/>
 
 =head2 What language is Rakudo written in?
 
