--- a/Language/faq.pod
+++ b/Language/faq.pod
@@ -484,7 +484,7 @@ C<OpaquePointer> is deprecated and has been replaced with C<Pointer>.
 =head2 What Perl 6 Implementations are available?
 
 Currently the best developed is Rakudo (using multiple Virtual Machine
-backends). Historic implementations include Niecza (.NET) and Pugs (Haskall).
+backends). Historic implementations include Niecza (.NET) and Pugs (Haskell).
 Others are listed at  L<Perl 6 Compilers|https://www.perl6.org/compilers/>
 
 =head2 What language is Rakudo written in?
