another definition for MoarVM

--- a/Language/glossary.pod
+++ b/Language/glossary.pod
@@ -708,7 +708,8 @@ Methods are L<subroutine|#Subroutine>s that are called with an L<invocant|#Invoc
 
 =head1 MoarVM
 
-A virtual machine designed specifically for L<#NQP> and its L<#MOP>:
+MoarVM is short for Metamodel On A Runtime Virtual Machine.
+It's a virtual machine designed specifically for L<#NQP> and its L<#MOP>:
 L<#6model>.  A document about
 L<the purpose of MoarVM|https://github.com/MoarVM/MoarVM/blob/master/docs/reveal.md>.
 MoarVM has some similarities with the Hotspot VM so you may peruse its
