--- a/Type/Any.pod
+++ b/Type/Any.pod
@@ -103,7 +103,7 @@ Interprets the invocant as a list, and returns that L<List|/type/List>.
 
 =head2 method push
 
-The method push is defined for undefined invocants and allowes for
+The method push is defined for undefined invocants and allows for
 autovivifying undefined to an empty C<Array>, unless the undefined value
 implements C<Positional> already.  The argument provided will then be pushed
 into the newly created Array.
