--- a/Type/Signature.pod
+++ b/Type/Signature.pod
@@ -219,7 +219,7 @@ Type captures and coercion types are not supported.
 
 To accept one type but coerce it automatically to another, use the accepted
 type as an argument to the target type. If the accepted type is C<Any> it can
-be obmitted.
+be omitted.
 
     sub f(Int(Str) $want-int, Str() $want-str){ say $want-int.WHAT, $want-str.WHAT }
     f '10', 10; 
@@ -277,7 +277,7 @@ as described below.
 
 =head2 Single Argument Rule Slurpy
 
-The single argument rule allowes to treat arguments to subroutines,
+The single argument rule allows to treat arguments to subroutines,
 C<for>-loops and list constructors based on context. Many methods on positional
 types can work with a single arguments the same way as with a list or
 arguments. Using C<+@> as a sigil in a Signature provides syntactic sugar to
