Remove custom operators work-around prose for cmp-ok
It now fully supports user-defined operators passed as Str

--- a/Language/testing.pod
+++ b/Language/testing.pod
@@ -247,7 +247,8 @@ passes the test if the comparison yields a C<True> value. The C<$description>
 of the test is optional.
 
 The C<$comparison> comparator can be either a L<Callable> or 
-a L<Str> containing a I<core> infix operator, such as C<'=='> or C<'~~'>.
+a L<Str> containing aninfix operator, such as C<'=='>, a C<'~~'>, or a
+user-defined infix.
 
     cmp-ok 'my spelling is apperling', '~~', /perl/, "bad speller";
 
@@ -258,12 +259,6 @@ A L<Callable> C<$comparison> lets you use custom comparisons:
 
     cmp-ok 2, -> $a, $b { $a.is-prime and $b.is-prime and $a < $b }, 7,
         'we got primes, one larger than the other!';
-
-B<Note:> user-defined operators cannot be passed as strings. Use
-the C<&[]> notation to create a L<Callable> for them instead:
-
-    sub infix:<◀> { $^a < $^b };
-    cmp-ok 4, &[◀], 5, 'comparing using my fancy operator';
 
 =head2 By object type
 
