update page name

--- a/HomePage.pod
+++ b/HomePage.pod
@@ -11,7 +11,7 @@ by reporting mistakes or sending patches.
 
 <dl>
 
-<dt><a href="/perl6.html">Perl 6 Programs</a></dt>
+<dt><a href="/programs.html">Perl 6 Programs</a></dt>
 <dd>
     A collection of documents describing how to
     run the Perl 6 executable program and other utilities,
