--- a/Type/Baggy.pod
+++ b/Type/Baggy.pod
@@ -237,6 +237,17 @@ object.
     my $n = ("a" => 5, "b" => 1, "b" => 2).BagHash;
     say $n.total;                                     # 8
 
+=head2 method default
+
+Defined as:
+
+    method default(Baggy:D:) returns Int:D
+
+Returns zero.
+
+    my $breakfast = bag <eggs bacon>;
+    say $breakfast.default;                           # 0
+
 =head2 method ACCEPTS
 
 =comment TODO
