Added docs for Baggy.Set

--- a/Type/Baggy.pod
+++ b/Type/Baggy.pod
@@ -248,6 +248,17 @@ Returns zero.
     my $breakfast = bag <eggs bacon>;
     say $breakfast.default;                           # 0
 
+=head2 method Set
+
+Defined as:
+
+    method Set() returns Set:D
+
+Returns a L<Set|/type/Set> whose elements are the L<keys|#method keys> of the invocant.
+
+    my $breakfast = (eggs => 2, bacon => 3).BagHash;
+    say $breakfast.Set;                               # set(bacon, eggs)
+
 =head2 method ACCEPTS
 
 =comment TODO
