Added docs for Baggy.SetHash

--- a/Type/Baggy.pod
+++ b/Type/Baggy.pod
@@ -259,6 +259,19 @@ Returns a L<Set|/type/Set> whose elements are the L<keys|#method keys> of the in
     my $breakfast = (eggs => 2, bacon => 3).BagHash;
     say $breakfast.Set;                               # set(bacon, eggs)
 
+=head2 method SetHash
+
+Defined as:
+
+    method SetHash() returns SetHash:D
+
+Returns a L<SetHash|/type/SetHash> whose elements are the L<keys|#method keys> of the invocant.
+
+    my $breakfast = (eggs => 2, bacon => 3).BagHash;
+    my $sh = $breakfast.SetHash;
+    say $sh.WHAT;                                     # (SetHash)
+    say $sh.elems;                                    # 2
+
 =head2 method ACCEPTS
 
 =comment TODO
